--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.0",
     "react-slick": "^0.29.0",
-    "react-spinners": "^0.13.8"
+    "react-spinners": "^0.13.8",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
